--- a/Ders2/python-intro.ipynb
+++ b/Ders2/python-intro.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_ow(one,two):\n",
+    "def my_pow(one,two):\n",
     "    \"\"\" \n",
     "    deneme yazısı\n",
     "    \"\"\"\n",
@@ -23,28 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "str(object='') -> str\n",
-      "str(bytes_or_buffer[, encoding[, errors]]) -> str\n",
-      "\n",
-      "Create a new string object from the given object. If encoding or\n",
-      "errors is specified, then the object must expose a data buffer\n",
-      "that will be decoded using the given encoding and error handler.\n",
-      "Otherwise, returns the result of object.__str__() (if defined)\n",
-      "or repr(object).\n",
-      "encoding defaults to sys.getdefaultencoding().\n",
-      "errors defaults to 'strict'.\n"
+      " \n",
+      "    deneme yazısı\n",
+      "    \n"
      ]
     }
    ],
    "source": [
-    "print(str.__doc__)"
+    "print(my_pow.__doc__)"
    ]
   }
  ],
