--- a/Odevler/odev1.ipynb
+++ b/Odevler/odev1.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,12 +112,13 @@
     "    dict_string={}\n",
     "    for i in list_string:\n",
     "        dict_string[i] = list_string.count(i)\n",
+    "        list_string.replace(i,\"\")\n",
     "    return dict_string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +136,7 @@
        " 'i': 1}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
