--- a/Odevler/odev2.0.ipynb
+++ b/Odevler/odev2.0.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,13 +45,384 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_confirm = pd.read_csv(infected_dataset_url)\n",
     "df_recovered = pd.read_csv(recovered_dataset_url)\n",
     "df_deaths = pd.read_csv(deaths_dataset_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Province/State</th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>1/22/20</th>\n",
+       "      <th>1/23/20</th>\n",
+       "      <th>1/24/20</th>\n",
+       "      <th>1/25/20</th>\n",
+       "      <th>1/26/20</th>\n",
+       "      <th>1/27/20</th>\n",
+       "      <th>...</th>\n",
+       "      <th>6/6/20</th>\n",
+       "      <th>6/7/20</th>\n",
+       "      <th>6/8/20</th>\n",
+       "      <th>6/9/20</th>\n",
+       "      <th>6/10/20</th>\n",
+       "      <th>6/11/20</th>\n",
+       "      <th>6/12/20</th>\n",
+       "      <th>6/13/20</th>\n",
+       "      <th>6/14/20</th>\n",
+       "      <th>6/15/20</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19551</td>\n",
+       "      <td>20342</td>\n",
+       "      <td>20917</td>\n",
+       "      <td>21459</td>\n",
+       "      <td>22142</td>\n",
+       "      <td>22890</td>\n",
+       "      <td>23546</td>\n",
+       "      <td>24102</td>\n",
+       "      <td>24766</td>\n",
+       "      <td>25527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>41.153300</td>\n",
+       "      <td>20.168300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1232</td>\n",
+       "      <td>1246</td>\n",
+       "      <td>1263</td>\n",
+       "      <td>1299</td>\n",
+       "      <td>1341</td>\n",
+       "      <td>1385</td>\n",
+       "      <td>1416</td>\n",
+       "      <td>1464</td>\n",
+       "      <td>1521</td>\n",
+       "      <td>1590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>28.033900</td>\n",
+       "      <td>1.659600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10050</td>\n",
+       "      <td>10154</td>\n",
+       "      <td>10265</td>\n",
+       "      <td>10382</td>\n",
+       "      <td>10484</td>\n",
+       "      <td>10589</td>\n",
+       "      <td>10698</td>\n",
+       "      <td>10810</td>\n",
+       "      <td>10919</td>\n",
+       "      <td>11031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>42.506300</td>\n",
+       "      <td>1.521800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>852</td>\n",
+       "      <td>852</td>\n",
+       "      <td>852</td>\n",
+       "      <td>852</td>\n",
+       "      <td>852</td>\n",
+       "      <td>852</td>\n",
+       "      <td>853</td>\n",
+       "      <td>853</td>\n",
+       "      <td>853</td>\n",
+       "      <td>853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>-11.202700</td>\n",
+       "      <td>17.873900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>88</td>\n",
+       "      <td>91</td>\n",
+       "      <td>92</td>\n",
+       "      <td>96</td>\n",
+       "      <td>113</td>\n",
+       "      <td>118</td>\n",
+       "      <td>130</td>\n",
+       "      <td>138</td>\n",
+       "      <td>140</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sao Tome and Principe</td>\n",
+       "      <td>0.186360</td>\n",
+       "      <td>6.613081</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>499</td>\n",
+       "      <td>513</td>\n",
+       "      <td>513</td>\n",
+       "      <td>514</td>\n",
+       "      <td>611</td>\n",
+       "      <td>632</td>\n",
+       "      <td>639</td>\n",
+       "      <td>659</td>\n",
+       "      <td>661</td>\n",
+       "      <td>662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>15.552727</td>\n",
+       "      <td>48.516388</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>482</td>\n",
+       "      <td>484</td>\n",
+       "      <td>496</td>\n",
+       "      <td>524</td>\n",
+       "      <td>560</td>\n",
+       "      <td>591</td>\n",
+       "      <td>632</td>\n",
+       "      <td>705</td>\n",
+       "      <td>728</td>\n",
+       "      <td>844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Comoros</td>\n",
+       "      <td>-11.645500</td>\n",
+       "      <td>43.333300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>141</td>\n",
+       "      <td>141</td>\n",
+       "      <td>141</td>\n",
+       "      <td>141</td>\n",
+       "      <td>162</td>\n",
+       "      <td>162</td>\n",
+       "      <td>163</td>\n",
+       "      <td>176</td>\n",
+       "      <td>176</td>\n",
+       "      <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tajikistan</td>\n",
+       "      <td>38.861034</td>\n",
+       "      <td>71.276093</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4453</td>\n",
+       "      <td>4529</td>\n",
+       "      <td>4609</td>\n",
+       "      <td>4690</td>\n",
+       "      <td>4763</td>\n",
+       "      <td>4834</td>\n",
+       "      <td>4902</td>\n",
+       "      <td>4971</td>\n",
+       "      <td>5035</td>\n",
+       "      <td>5097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lesotho</td>\n",
+       "      <td>-29.609988</td>\n",
+       "      <td>28.233608</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>266 rows × 150 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Province/State         Country/Region        Lat       Long  1/22/20  \\\n",
+       "0              NaN            Afghanistan  33.000000  65.000000        0   \n",
+       "1              NaN                Albania  41.153300  20.168300        0   \n",
+       "2              NaN                Algeria  28.033900   1.659600        0   \n",
+       "3              NaN                Andorra  42.506300   1.521800        0   \n",
+       "4              NaN                 Angola -11.202700  17.873900        0   \n",
+       "..             ...                    ...        ...        ...      ...   \n",
+       "261            NaN  Sao Tome and Principe   0.186360   6.613081        0   \n",
+       "262            NaN                  Yemen  15.552727  48.516388        0   \n",
+       "263            NaN                Comoros -11.645500  43.333300        0   \n",
+       "264            NaN             Tajikistan  38.861034  71.276093        0   \n",
+       "265            NaN                Lesotho -29.609988  28.233608        0   \n",
+       "\n",
+       "     1/23/20  1/24/20  1/25/20  1/26/20  1/27/20  ...  6/6/20  6/7/20  6/8/20  \\\n",
+       "0          0        0        0        0        0  ...   19551   20342   20917   \n",
+       "1          0        0        0        0        0  ...    1232    1246    1263   \n",
+       "2          0        0        0        0        0  ...   10050   10154   10265   \n",
+       "3          0        0        0        0        0  ...     852     852     852   \n",
+       "4          0        0        0        0        0  ...      88      91      92   \n",
+       "..       ...      ...      ...      ...      ...  ...     ...     ...     ...   \n",
+       "261        0        0        0        0        0  ...     499     513     513   \n",
+       "262        0        0        0        0        0  ...     482     484     496   \n",
+       "263        0        0        0        0        0  ...     141     141     141   \n",
+       "264        0        0        0        0        0  ...    4453    4529    4609   \n",
+       "265        0        0        0        0        0  ...       4       4       4   \n",
+       "\n",
+       "     6/9/20  6/10/20  6/11/20  6/12/20  6/13/20  6/14/20  6/15/20  \n",
+       "0     21459    22142    22890    23546    24102    24766    25527  \n",
+       "1      1299     1341     1385     1416     1464     1521     1590  \n",
+       "2     10382    10484    10589    10698    10810    10919    11031  \n",
+       "3       852      852      852      853      853      853      853  \n",
+       "4        96      113      118      130      138      140      142  \n",
+       "..      ...      ...      ...      ...      ...      ...      ...  \n",
+       "261     514      611      632      639      659      661      662  \n",
+       "262     524      560      591      632      705      728      844  \n",
+       "263     141      162      162      163      176      176      176  \n",
+       "264    4690     4763     4834     4902     4971     5035     5097  \n",
+       "265       4        4        4        4        4        4        4  \n",
+       "\n",
+       "[266 rows x 150 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_confirm"
    ]
   },
   {
@@ -341,6 +712,40 @@
    ],
    "source": [
     "type(full_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#def make_frame(country:str):\n",
+    "#df_confirm[country][5:].value_counts()+ df_recovered[country][5:].value_counts()+ df_deaths[country][5:].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(make_frame(\"China\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_frame(country:str):\n",
+    "    df = pd.DataFrame({\n",
+    "        'infected': df_confirm.loc[country],\n",
+    "        'recovered': df_recovered.loc[country],\n",
+    "        'deaths': df_deaths.loc[country],\n",
+    "    })\n",
+    "    df.index = pd.to_datetime(df.index, format = '%m/%d/%y')"
    ]
   }
  ],
