Data Vis with Group

--- a/Week-3/data-vis.ipynb
+++ b/Week-3/data-vis.ipynb
@@ -2,27 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Excalibur\\anaconda3\\Lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning:\n",
-      "\n",
-      "Blowfish has been deprecated\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px\n",
-    "import plotly.figure_factory as ff"
+    "import plotly.express as px"
    ]
   },
   {
