Machine learning intro

--- a/Week-6/machine-learning-intro.ipynb
+++ b/Week-6/machine-learning-intro.ipynb
@@ -499,6 +499,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Unsupervised \n",
+    "\n",
     "Dimension reduction, density estimation, market basket analysis and clustering are the most widely used unsupervised machine learning techniques."
    ]
   }
